Add case study pages and update homepage

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
       <div class="about-hero-grid">
         <h1 class="about-title">Hi! I'm <span class="text-brand">Wenjin</span></h1>
         <div class="about-content">
-          <p>I'm a freelance product designer based in Kuala Lumpur, Malaysia with over two years of experience in the design industry. At the core of my work is helping people and businesses navigate decisions through informed, pragmatic, and intuitive solutions.</p>
+          <p>I'm a freelance product designer based in Kuala Lumpur, Malaysia with over two years of experience in the design industry. At the core of my work is <strong>helping people and businesses navigate decisions through informed, pragmatic, and intuitive solutions.</strong></p>
           <p>In a previous life, I was a strategy consultant at Mastercard and Monitor Deloitte, which means I still enjoy entangling messy problems (just with fewer spreadsheets now).</p>
           <div class="about-image">
             <img src="assets/images/about/my-photo.jpg" alt="Photo of Wenjin with a cat" />
@@ -92,7 +92,7 @@
         </nav>
       </div>
     </div>
-    <p class="footer-copyright">&copy; Chung Wenjin 2025</p>
+    <p class="footer-copyright">&copy; Chung Wenjin 2026</p>
   </footer>
 
   <script>
