--- a/index.html
+++ b/index.html
@@ -68,11 +68,10 @@
             <!-- Project 3 -->
             <a href="/zenyum-checkout.html" class="project-card">
                 <div class="project-thumbnail">
-                    <img src="assets/images/projects/zenyum-checkout.jpg" alt="Zenyum aligners self-checkout" style="filter: grayscale(100%) brightness(1.2) contrast(0.8)"/>
+                    <img src="assets/images/projects/zenyum-checkout.jpg" alt="Zenyum aligners self-checkout"/>
                 </div>
                 <div class="project-info">
                     <p class="project-title"><strong>Zenyum </strong> Aligners Self-checkout</p>
-                    <span class="project-status">Coming soon</span>
                 </div>
             </a>
 
@@ -96,8 +95,8 @@
 
             <!-- Testimonial 1 -->
             <article class="testimonial-card">
-                <svg class="quote-icon" viewBox="0 0 20 18" aria-hidden="true" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M20 0.172532L19.4845 3.79373C18.4307 3.70088 17.5945 3.88659 16.9759 4.35084C16.3574 4.79189 15.9336 5.43024 15.7045 6.26591C15.4983 7.07836 15.4639 8.00687 15.6014 9.05145H20V18H11.512V8.70325C11.512 5.66237 12.2222 3.3643 13.6426 1.80904C15.063 0.230564 17.1821 -0.314939 20 0.172532ZM8.48797 0.172532L7.97251 3.79373C6.91867 3.70088 6.08247 3.88659 5.46392 4.35084C4.84536 4.79189 4.42153 5.43024 4.19244 6.26591C3.98625 7.07836 3.95189 8.00687 4.08935 9.05145H8.48797V18H0V8.70325C0 5.66237 0.710195 3.3643 2.13058 1.80904C3.55097 0.230564 5.6701 -0.314939 8.48797 0.172532Z" fill="currentColor"/>
+                <svg class="quote-icon" viewBox="0 0 34 28" aria-hidden="true" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M34 21.2059C34 23.0588 33.2959 24.6716 31.8876 26.0441C30.4793 27.348 28.7357 28 26.6568 28C24.3097 28 22.3649 27.1422 20.8225 25.4265C19.3471 23.7108 18.6095 21.4461 18.6095 18.6324C18.6095 12.799 20.1183 8.33824 23.1361 5.25C26.1538 2.16177 29.4734 0.411768 33.0947 0V5.66176C31.0828 6.0049 29.2722 7.06863 27.6627 8.85294C26.1203 10.6373 25.3156 12.6275 25.2485 14.8235C25.9191 14.4804 26.5897 14.3088 27.2604 14.3088C29.2722 14.3088 30.8817 14.9608 32.0888 16.2647C33.3629 17.5 34 19.1471 34 21.2059ZM15.3905 21.2059C15.3905 23.0588 14.6864 24.6716 13.2781 26.0441C11.8698 27.348 10.1262 28 8.04734 28C5.7002 28 3.75542 27.1422 2.21302 25.4265C0.737673 23.7108 0 21.4461 0 18.6324C0 12.799 1.47534 8.33824 4.42604 5.25C7.44379 2.09314 10.7968 0.343137 14.4852 0V5.66176C12.4063 6.0049 10.5621 7.06863 8.95266 8.85294C7.41026 10.6373 6.60552 12.6275 6.53846 14.8235C7.20907 14.4804 7.91321 14.3088 8.65089 14.3088C10.5957 14.3088 12.2051 14.9608 13.4793 16.2647C14.7535 17.5 15.3905 19.1471 15.3905 21.2059Z" fill="currentColor"/>
                 </svg>
                 <p class="testimonial-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 <div class="testimonial-author">
@@ -111,8 +110,8 @@
 
             <!-- Testimonial 2 -->
             <article class="testimonial-card">
-                <svg class="quote-icon" width="24" height="18" viewBox="0 0 24 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M0 18V10.5C0 7.5 0.625 5.0625 1.875 3.1875C3.125 1.3125 5.25 0.125 8.25 0L9 2.25C7.25 2.5 5.9375 3.125 5.0625 4.125C4.1875 5.125 3.75 6.25 3.75 7.5H9V18H0ZM15 18V10.5C15 7.5 15.625 5.0625 16.875 3.1875C18.125 1.3125 20.25 0.125 23.25 0L24 2.25C22.25 2.5 20.9375 3.125 20.0625 4.125C19.1875 5.125 18.75 6.25 18.75 7.5H24V18H15Z" fill="currentColor"/>
+                <svg class="quote-icon" viewBox="0 0 34 28" aria-hidden="true" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M34 21.2059C34 23.0588 33.2959 24.6716 31.8876 26.0441C30.4793 27.348 28.7357 28 26.6568 28C24.3097 28 22.3649 27.1422 20.8225 25.4265C19.3471 23.7108 18.6095 21.4461 18.6095 18.6324C18.6095 12.799 20.1183 8.33824 23.1361 5.25C26.1538 2.16177 29.4734 0.411768 33.0947 0V5.66176C31.0828 6.0049 29.2722 7.06863 27.6627 8.85294C26.1203 10.6373 25.3156 12.6275 25.2485 14.8235C25.9191 14.4804 26.5897 14.3088 27.2604 14.3088C29.2722 14.3088 30.8817 14.9608 32.0888 16.2647C33.3629 17.5 34 19.1471 34 21.2059ZM15.3905 21.2059C15.3905 23.0588 14.6864 24.6716 13.2781 26.0441C11.8698 27.348 10.1262 28 8.04734 28C5.7002 28 3.75542 27.1422 2.21302 25.4265C0.737673 23.7108 0 21.4461 0 18.6324C0 12.799 1.47534 8.33824 4.42604 5.25C7.44379 2.09314 10.7968 0.343137 14.4852 0V5.66176C12.4063 6.0049 10.5621 7.06863 8.95266 8.85294C7.41026 10.6373 6.60552 12.6275 6.53846 14.8235C7.20907 14.4804 7.91321 14.3088 8.65089 14.3088C10.5957 14.3088 12.2051 14.9608 13.4793 16.2647C14.7535 17.5 15.3905 19.1471 15.3905 21.2059Z" fill="currentColor"/>
                 </svg>
                 <p class="testimonial-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 <div class="testimonial-author">
