--- a/zenyum-checkout.html
+++ b/zenyum-checkout.html
@@ -14,7 +14,8 @@
   <header id="site-header">
     <nav class="navbar">
       <a href="/" class="nav-logo">Chung Wenjin</a>
-      <div class="nav-links">
+      <button class="nav-toggle" aria-expanded="false" aria-controls="nav-menu">Menu</button>
+      <div class="nav-links" id="nav-menu">
         <a href="/#projects" class="nav-link">Work</a>
         <a href="/about.html" class="nav-link">About</a>
         <a href="assets/Resume-ChungWenjin.pdf" class="nav-link" target="_blank" rel="noopener">Resume</a>
@@ -28,13 +29,13 @@
       <div class="case-hero-header">
         <span class="case-number">02</span>
         <div class="case-intro">
-          <h1 class="case-title">Zenyum</h1>
-          <h1 class="case-title">Aligners Self-checkout</h1>
+          <h1 class="case-title">Zenyum Aligners</h1>
+          <h1 class="case-title">Self-checkout</h1>
           <p class="case-subtitle">Digitalizing Zenyum’s offline sales experience to give patients a smoother, more transparent journey from consultation to treatment.</p>
         </div>
       </div>
       <div class="case-hero-image">
-        <img src="assets/images/case-studies/flipstream-onboarding/hero.jpg" alt="Flipstream onboarding interface">
+        <img src="assets/images/case-studies/zenyum-checkout/hero.jpg" alt="Zenyum Aligners mobile checkout interface">
       </div>
     </section>
 
@@ -44,71 +45,21 @@
         <div class="metadata-items">
           <dl class="metadata-item">
             <dt>Client</dt>
-            <dd>Flipstream</dd>
+            <dd>Zenyum</dd>
           </dl>
           <dl class="metadata-item">
             <dt>Scope</dt>
-            <dd>B2B Desktop web app</dd>
+            <dd>B2C; Web app</dd>
           </dl>
           <dl class="metadata-item">
             <dt>Year</dt>
-            <dd>2023</dd>
+            <dd>2025</dd>
           </dl>
           <dl class="metadata-item">
             <dt>Context</dt>
-            <dd>Flipstream Pulse is a data insights platform for marketing agencies who work with vast volumes of campaign data for their clients. The app is technically capable of connecting to any data source for the client and producing a powerful, customizable setup, but in practice introduced friction. The goal was to minimize setup time while redesigning activation around exploration and milestones.</dd>
+            <dd>Zenyum’s Aligner sales and payment process is handled entirely offline. This creates high operational load for sales team, introduces pricing inconsistencies, and creates unnecessary friction for patients who expect seamless self-service checkout experiences.</dd>
           </dl>
         </div>
-      </div>
-    </section>
-
-    <!-- Current state -->
-    <section class="case-section">
-      <div class="case-section-heading">
-        <h3>Current state</h3>
-      </div>
-
-      <div class="case-section-content">
-        <article class="case-issue">
-          <div class="case-text">
-            <span class="case-label">Issue 1</span>
-            <div class="case-text-content">
-              <h4 class="case-heading">Unused questionnaire</h4>
-              <p>Questionnaire to gather sales metadata was no longer used by business, creating confusion and adding unnecessary steps.</p>
-            </div>
-          </div>
-          <div class="case-image">
-            <img src="assets/images/case-studies/flipstream-onboarding/current-state-questionnaire.jpg" alt="Unused questionnaire screen">
-          </div>
-        </article>
-
-        <article class="case-issue">
-          <div class="case-text">
-            <span class="case-label">Issue 2</span>
-            <div class="case-text-content">
-              <h4 class="case-heading">Repetitive setup effort</h4>
-              <p>Interactive guidance and contextual hints helped users complete the initial setup, but the same sequence had to be repeated for every additional client or connection. This created significant effort with limited perceived payoff.</p>
-            </div>
-          </div>
-          <div class="case-image">
-            <img src="assets/images/case-studies/flipstream-onboarding/current-state-repetitive.jpg" alt="Repetitive setup flow">
-          </div>
-        </article>
-
-        <article class="case-issue">
-          <div class="case-text">
-            <span class="case-label">Issue 3</span>
-            <div class="case-text-content">
-              <h4 class="case-heading">Generic dashboard</h4>
-              <p>All users were led to the same default dashboard regardless of their goals or KPIs. Users are forced to redundantly create new dashboard and explore multiple templates to discover something relevant.</p>
-            </div>
-          </div>
-          <div class="case-image">
-            <img src="assets/images/case-studies/flipstream-onboarding/current-state-generic.jpg" alt="Generic dashboard view">
-          </div>
-        </article>
-
-        <p class="case-summary">Around the same time, technical improvements including backend refactoring and prototype-enabled bulk setup and faster ETL processing. Together with these insights, this created an opportunity to reduce setup time, lower cognitive load, and help users reach an "aha" moment sooner.</p>
       </div>
     </section>
 
@@ -118,43 +69,27 @@
         <h3>Solution</h3>
       </div>
 
-      <div class="case-section-content">
-        <article class="case-solution">
+      <div class="case-section-content zenyum-solution-grid">
+        <article class="case-solution zenyum-solution">
           <div class="case-image">
-            <img src="assets/images/case-studies/flipstream-onboarding/solution-onboarding-entry.jpg" alt="Welcome to Flipstream Pulse screen">
+            <img src="assets/images/case-studies/zenyum-checkout/solution-timeline.jpg" alt="Personal timeline to track sales journey">
           </div>
-          <p>Start with the data source most relevant to early adopters - Google Search Console to simplify decision-making.</p>
+          <p>Personal treatment timeline to track patient’s sales journey and upcoming steps.</p>
         </article>
 
-        <article class="case-solution">
+        <article class="case-solution zenyum-solution">
           <div class="case-image">
-            <img src="assets/images/case-studies/flipstream-onboarding/solution-setup-connection.jpg" alt="Bulk account and connection setup">
+            <img src="assets/images/case-studies/zenyum-checkout/solution-treatment-plan.jpg" alt="Treatment plan review">
           </div>
-          <p>Enable bulk account and connection setup.</p>
+          <p>Online treatment plan review and approval.</p>
         </article>
 
-        <article class="case-solution">
+        <article class="case-solution zenyum-solution">
           <div class="case-image">
-            <img src="assets/images/case-studies/flipstream-onboarding/solution-assign-connection.jpg" alt="Pre-created client spaces">
+            <img src="assets/images/case-studies/zenyum-checkout/solution-checkout-page.jpg" alt="Checkout page">
           </div>
-          <p>Pre-create client spaces based on fuzzy URL matching, while giving users full control to edit as needed.</p>
-        </article>
-
-        <article class="case-solution">
-          <div class="case-image">
-            <img src="assets/images/case-studies/flipstream-onboarding/solution-onboarding-end.jpg" alt="Welcome loading screen">
-          </div>
-          <div class="case-solution-text">
-            <p>Gate app access while ETL runs to prevent frustration from empty dashboards. </p>
-            <p>Allow optional additional data source setup while waiting, without overwhelming them upfront.</p>
-          </div>
-        </article>
-
-        <article class="case-solution">
-          <div class="case-image">
-            <img src="assets/images/case-studies/flipstream-onboarding/solution-dashboard.jpg" alt="Curated dashboard library">
-          </div>
-          <p>Redesigned activation around goal-based discovery by Introducing a curated dashboard library co-developed with a user test panel.</p>
+          <p style="font-weight: 500;">One major challenge was managing the shift from high-touch sales to a self-serve experience. Offline, sales teams could explain value in real time, and tailor discounts or bundles to drive conversion. </p>
+          <p>Digitally, we needed to reinforce key decision factors, maintain pricing transparency, and provide access to a sales rep when needed. We also leveraged event tracking to support sales in re-engaging patients.</p>
         </article>
       </div>
     </section>
@@ -175,7 +110,7 @@
         </nav>
       </div>
       <div class="footer-column">
-        <span class="footer-heading">Contacts</span>
+        <span class="footer-heading">Contact</span>
         <nav class="footer-links">
           <a href="mailto:wenjin.chung@gmail.com">wenjin.chung@gmail.com</a>
           <a href="https://linkedin.com/in/wenjinchung" target="_blank" rel="noopener">LinkedIn</a>
@@ -185,5 +120,24 @@
     <p class="footer-copyright">&copy; Chung Wenjin 2026</p>
   </footer>
 
+  <script>
+    const navToggle = document.querySelector('.nav-toggle');
+    const navMenu = document.querySelector('.nav-links');
+
+    navToggle.addEventListener('click', () => {
+      const isOpen = navToggle.getAttribute('aria-expanded') === 'true';
+      navToggle.setAttribute('aria-expanded', !isOpen);
+      navToggle.textContent = isOpen ? 'Menu' : 'Close';
+      navMenu.classList.toggle('nav-open', !isOpen);
+    });
+
+    navMenu.querySelectorAll('.nav-link').forEach(link => {
+      link.addEventListener('click', () => {
+        navToggle.setAttribute('aria-expanded', 'false');
+        navToggle.textContent = 'Menu';
+        navMenu.classList.remove('nav-open');
+      });
+    });
+  </script>
 </body>
 </html>
