--- a/about.html
+++ b/about.html
@@ -54,6 +54,7 @@
     <!-- Clients -->
     <section id="clients">
       <div class="clients-grid">
+        <img src="assets/images/about/peeping-cat.gif" alt="Peeping cat" class="peeping-cat">
         <h2 class="clients-title">Clients</h2>
         <div class="clients-list">
           <div class="client-row">
@@ -92,8 +93,8 @@
         <nav class="footer-links">
           <a href="/flipstream-onboarding.html">Flipstream Onboarding & Activation</a>
           <a href="#">Flipstream Pulse Web App</a>
-          <a href="/zenyum-checkout.html">Zenyum Aligners Self-checkout</a>
           <a href="#">Zenyum Mobile App Revamp</a>
+          <a href="/zenyum-checkout.html">Zenyum Aligners Self-checkout</a>
         </nav>
       </div>
       <div class="footer-column">
