--- a/flipstream-onboarding.html
+++ b/flipstream-onboarding.html
@@ -69,7 +69,7 @@
           </dl>
           <dl class="metadata-item">
             <dt>Context</dt>
-            <dd>Flipstream Pulse is a data insights platform for marketing agencies who work with vast volumes of campaign data for their clients. The app is technically capable of connecting to any data source for the client and producing a powerful, customizable setup, but in practice introduced friction. The goal was to minimize setup time while redesigning activation around exploration and milestones.</dd>
+            <dd>Flipstream Pulse is a data insights platform for marketing agencies who deal with vast data and dashboards for their end-clients. The original onboarding guided users through a strict, step-by-step sequence intended to quickly showcase value, but in practice introduced friction. The goal was the minimize setup time while redesigning activation around exploration and relevance.</dd>
           </dl>
         </div>
       </div>
@@ -113,7 +113,7 @@
             <span class="case-label">Issue 3</span>
             <div class="case-text-content">
               <h4 class="case-heading">Generic dashboard</h4>
-              <p>All users were led to the same default dashboard regardless of their goals or KPIs. Users are forced to redundantly create new dashboard and explore multiple templates to discover something relevant.</p>
+              <p>All users were led to the same default dashboard regardless of their goals or KPIs. Users are forced to individually create new dashboard and explore multiple templates to discover something relevant.</p>
             </div>
           </div>
           <div class="case-image">
@@ -121,7 +121,7 @@
           </div>
         </article>
 
-        <p class="case-summary">Around the same time, technical improvements including backend refactoring and prototype-enabled bulk setup and faster ETL processing. Together with these insights, this created an opportunity to reduce setup time, lower cognitive load, and help users reach an "aha" moment sooner.</p>
+        <p class="case-summary">Around the same time, technical improvements including backend refactoring and database upgrades  enabled bulk setup and faster ETL processing. Together with these insights, this created an opportunity to reduce setup time, lower cognitive load, and help users reach an "aha" moment sooner.</p>
       </div>
     </section>
 
@@ -182,9 +182,9 @@
         <span class="footer-heading">Work</span>
         <nav class="footer-links">
           <a href="/flipstream-onboarding.html">Flipstream Onboarding & Activation</a>
-          <a href="#">Flipstream Pulse Web App</a>
+          <a href="/flipstream-webapp.html">Flipstream Pulse Web App</a>
+          <a href="/zenyum-app.html">Zenyum Mobile App Revamp</a>
           <a href="/zenyum-checkout.html">Zenyum Aligners Self-checkout</a>
-          <a href="#">Zenyum Mobile App Revamp</a>
         </nav>
       </div>
       <div class="footer-column">
