--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </a>
 
             <!-- Project 2 -->
-            <a href="#" class="project-card">
+            <a href="/flipstream-webapp.html" class="project-card">
                 <div class="project-thumbnail">
                     <img src="assets/images/projects/flipstream-webapp.jpg" alt="Flipstream Pulse web app" style="filter: grayscale(100%) brightness(1.2) contrast(0.8)"/>
                 </div>
@@ -78,23 +78,23 @@
             </a>
 
             <!-- Project 3 -->
-            <a href="/zenyum-checkout.html" class="project-card">
-                <div class="project-thumbnail">
-                    <img src="assets/images/projects/zenyum-checkout.jpg" alt="Zenyum aligners self-checkout"/>
-                </div>
-                <div class="project-info">
-                    <p class="project-title"><strong>Zenyum </strong> Aligners Self-checkout</p>
-                </div>
-            </a>
-
-            <!-- Project 4 -->
-            <a href="#" class="project-card">
+            <a href="/zenyum-app.html" class="project-card">
                 <div class="project-thumbnail">
                     <img src="assets/images/projects/zenyum-app.jpg" alt="Zenyum mobile app revamp" style="filter: grayscale(100%) brightness(1.2) contrast(0.8)"/>
                 </div>
                 <div class="project-info">
                     <p class="project-title"><strong>Zenyum </strong> Mobile App Revamp</p>
                     <span class="project-status">Coming soon</span>
+                </div>
+            </a>
+
+            <!-- Project 4 -->
+            <a href="/zenyum-checkout.html" class="project-card">
+                <div class="project-thumbnail">
+                    <img src="assets/images/projects/zenyum-checkout.jpg" alt="Zenyum aligners self-checkout"/>
+                </div>
+                <div class="project-info">
+                    <p class="project-title"><strong>Zenyum </strong> Aligners Self-checkout</p>
                 </div>
             </a>
         </div>
