--- a/zenyum-checkout.html
+++ b/zenyum-checkout.html
@@ -40,7 +40,7 @@
     <!-- Case hero -->
     <section class="case-hero">
       <div class="case-hero-header">
-        <span class="case-number">02</span>
+        <span class="case-number">04</span>
         <div class="case-intro">
           <h1 class="case-title">Zenyum Aligners</h1>
           <h1 class="case-title">Self-checkout</h1>
@@ -101,7 +101,7 @@
           <div class="case-image">
             <img src="assets/images/case-studies/zenyum-checkout/solution-checkout-page.jpg" alt="Checkout page">
           </div>
-          <p style="font-weight: 500;">One major challenge was managing the shift from high-touch sales to a self-serve experience. Offline, sales teams could explain value in real time, and tailor discounts or bundles to drive conversion. </p>
+          <p style="font-weight: 500;">One major challenge was managing the shift from high-touch sales to a self-serve experience. Offline sales teams could explain value in real time, and tailor discounts or bundles to drive conversion. </p>
           <p>Digitally, we needed to reinforce key decision factors, maintain pricing transparency, and provide access to a sales rep when needed. We also leveraged event tracking to support sales in re-engaging patients.</p>
         </article>
       </div>
@@ -117,9 +117,9 @@
         <span class="footer-heading">Work</span>
         <nav class="footer-links">
           <a href="/flipstream-onboarding.html">Flipstream Onboarding & Activation</a>
-          <a href="#">Flipstream Pulse Web App</a>
+          <a href="/flipstream-webapp.html">Flipstream Pulse Web App</a>
+          <a href="/zenyum-app.html">Zenyum Mobile App Revamp</a>
           <a href="/zenyum-checkout.html">Zenyum Aligners Self-checkout</a>
-          <a href="#">Zenyum Mobile App Revamp</a>
         </nav>
       </div>
       <div class="footer-column">
