New case study - Zenyum App 3.0

--- a/about.html
+++ b/about.html
@@ -92,8 +92,8 @@
         <span class="footer-heading">Work</span>
         <nav class="footer-links">
           <a href="/flipstream-onboarding.html">Flipstream Onboarding & Activation</a>
-          <a href="#">Flipstream Pulse Web App</a>
-          <a href="#">Zenyum Mobile App Revamp</a>
+          <a href="/flipstream-webapp.html">Flipstream Pulse Web App</a>
+          <a href="/zenyum-app.html">Zenyum Mobile App Revamp</a>
           <a href="/zenyum-checkout.html">Zenyum Aligners Self-checkout</a>
         </nav>
       </div>
