--- a/zenyum-app.html
+++ b/zenyum-app.html
@@ -82,29 +82,28 @@
         <h3>Proof of concept</h3>
       </div>
 
-      <div class="case-section-content">
-        <p class="case-intro-text">We launched a POC web app to explore the solution without huge tech investment, and also allowing the team to ship updates quickly. Users with a feature flag were redirected from the native app into this flow.</p>
+      <div class="case-section-content poc-grid">
+        <p class="case-intro-text">We launched a POC web app to explore the solution without huge tech investment, and also allowing the team to ship updates quickly. Users with a feature flag were redirected from the native app into the web.</p>
 
-        <div class="case-image poc-banner">
-          <img src="assets/images/case-studies/zenyum-app/poc-banner.jpg" alt="Your New ZenyumClear Smile Journey awaits">
+        <div class="case-video poc-banner">
+          <video src="assets/images/case-studies/zenyum-app/flight-path-sizzle-reel.mp4" autoplay muted playsinline controls></video>
         </div>
 
         <div class="case-learnings">
           <span class="learnings-label">Learnings</span>
-
-          <div class="learning-item">
-            <h4>Flexibility unveiled too many paths</h4>
-            <p>To accommodate different patient states, we designed in-modal ways to complete the patient status flow. This however in retrospective provides more flex than increased usability.</p>
-          </div>
-
-          <div class="learning-item">
-            <h4>Progress photos were more important than expected</h4>
-            <p>Patients rely heavily on photos to track their transformation and wanted more intuitive features.</p>
-          </div>
-
-          <div class="learning-item">
-            <h4>Notifications</h4>
-            <p>Frequency add-to-become noise, causing patients to just end engagements.</p>
+          <div class="learning-items">
+            <div class="learning-item">
+              <h4>Flexibility created too many paths</h4>
+              <p>To accommodate different patient habits, we designed multiple ways to complete the same core tasks. This resulted in unnecessarily complex flows that increased user cognitive load.</p>
+            </div>
+            <div class="learning-item">
+              <h4>Progress photos were more important than expected</h4>
+              <p>Patients rely heavily on photos to track their transformation and wanted more elaborate features.</p>
+            </div>
+            <div class="learning-item">
+              <h4>Notification overload</h4>
+              <p>Frequent alerts became noise, reducing patient trust and engagement.</p>
+            </div>
           </div>
         </div>
       </div>
@@ -119,11 +118,15 @@
       <div class="case-section-content zenyum-app-solutions">
         <article class="zenyum-app-solution">
           <div class="solution-label">
-            <span>Home</span>
-            <span>Treatment monitoring dashboard</span>
+            <span>Treatment monitoring dashboard (Home)</span>
           </div>
-          <div class="solution-image">
-            <img src="assets/images/case-studies/zenyum-app/solution-home.jpg" alt="Treatment monitoring dashboard">
+          <div class="solution-images-stack">
+            <div class="solution-image">
+              <img src="assets/images/case-studies/zenyum-app/solution-home.jpg" alt="Treatment monitoring dashboard">
+            </div>
+            <div class="solution-image">
+              <img src="assets/images/case-studies/zenyum-app/solution-home-components.jpg" alt="Treatment monitoring dashboard">
+            </div>
           </div>
         </article>
 
@@ -131,8 +134,8 @@
           <div class="solution-label">
             <span>Wear-time Timer</span>
           </div>
-          <div class="solution-image">
-            <img src="assets/images/case-studies/zenyum-app/solution-timer.jpg" alt="Wear-time timer">
+          <div class="solution-video">
+            <video src="assets/images/case-studies/zenyum-app/solution-timer.mp4" autoplay muted playsinline controls></video>
           </div>
         </article>
 
@@ -149,8 +152,8 @@
           <div class="solution-label">
             <span>Photos</span>
           </div>
-          <div class="solution-image">
-            <img src="assets/images/case-studies/zenyum-app/solution-photos.jpg" alt="Photos feature">
+          <div class="solution-video">
+            <video src="assets/images/case-studies/zenyum-app/solution-photos.mp4" autoplay muted playsinline controls></video>
           </div>
         </article>
       </div>
