--- a/index.html
+++ b/index.html
@@ -80,11 +80,10 @@
             <!-- Project 3 -->
             <a href="/zenyum-app.html" class="project-card">
                 <div class="project-thumbnail">
-                    <img src="assets/images/projects/zenyum-app.jpg" alt="Zenyum mobile app revamp" style="filter: grayscale(100%) brightness(1.2) contrast(0.8)"/>
+                    <img src="assets/images/projects/zenyum-app.jpg" alt="Zenyum mobile app revamp"/>
                 </div>
                 <div class="project-info">
                     <p class="project-title"><strong>Zenyum </strong> Mobile App Revamp</p>
-                    <span class="project-status">Coming soon</span>
                 </div>
             </a>
 
