Replace mp4 with jpg in Zenyum App 3.0 case study

--- a/zenyum-app.html
+++ b/zenyum-app.html
@@ -124,8 +124,13 @@
             <div class="solution-image">
               <img src="assets/images/case-studies/zenyum-app/solution-home.jpg" alt="Treatment monitoring dashboard">
             </div>
-            <div class="solution-image">
-              <img src="assets/images/case-studies/zenyum-app/solution-home-components.jpg" alt="Treatment monitoring dashboard">
+            <div class="solution-images-row">
+              <div class="solution-image">
+                <img src="assets/images/case-studies/zenyum-app/solution-home-status.jpg" alt="Treatment monitoring dashboard">
+              </div>
+              <div class="solution-image">
+                <img src="assets/images/case-studies/zenyum-app/solution-home-components.jpg" alt="Treatment monitoring dashboard">
+              </div>
             </div>
           </div>
         </article>
@@ -134,8 +139,8 @@
           <div class="solution-label">
             <span>Wear-time Timer</span>
           </div>
-          <div class="solution-video">
-            <video src="assets/images/case-studies/zenyum-app/solution-timer.mp4" autoplay muted playsinline controls></video>
+          <div class="solution-image">
+            <img src="assets/images/case-studies/zenyum-app/solution-timer.jpg" alt="Wear-time timer">
           </div>
         </article>
 
@@ -152,8 +157,8 @@
           <div class="solution-label">
             <span>Photos</span>
           </div>
-          <div class="solution-video">
-            <video src="assets/images/case-studies/zenyum-app/solution-photos.mp4" autoplay muted playsinline controls></video>
+          <div class="solution-image">
+            <img src="assets/images/case-studies/zenyum-app/solution-photos.jpg" alt="Calendar and appointments">
           </div>
         </article>
       </div>
