Remove coming soon on index

--- a/index.html
+++ b/index.html
@@ -69,11 +69,10 @@
             <!-- Project 2 -->
             <a href="/flipstream-webapp.html" class="project-card">
                 <div class="project-thumbnail">
-                    <img src="assets/images/projects/flipstream-webapp.jpg" alt="Flipstream Pulse web app" style="filter: grayscale(100%) brightness(1.2) contrast(0.8)"/>
+                    <img src="assets/images/projects/flipstream-webapp.jpg"/>
                 </div>
                 <div class="project-info">
                     <p class="project-title"><strong>Flipstream </strong> Pulse Web App</p>
-                    <span class="project-status">Coming soon</span>
                 </div>
             </a>
 
