--- a/flipstream-webapp.html
+++ b/flipstream-webapp.html
@@ -70,7 +70,7 @@
           </dl>
           <dl class="metadata-item">
             <dt>Context</dt>
-            <dd>Based on our dashboard-centric MVP, we learnt that decision-makers wanted clarity, not more dashboards, while analysts needed more flexible ways to extract insights quickly. Hence we designed Pulse's core experience from data visualization to insights delivery, supporting how agencies actually work.<br><br>With a small team under tight constraints, we adopted existing systems (Untitled UI, AG-Grid, AG-Charts) to reduce component-level work and focus on designing the experiences that drive value for users.</dd>
+            <dd>Based on our dashboard-centric MVP, we learnt that decision-makers wanted clarity, not more dashboards, while analysts needed more flexible ways to extract insights quickly. Hence we designed Pulse’s core experience to be based on insights delivery, supporting how agencies actually work.<br><br>With a small team under tight constraints, we adopted existing systems (Untitled UI, AG-Grid, AG-Charts) to reduce component-level work and focus on designing the experiences that drive value for users.</dd>
           </dl>
         </div>
       </div>
