Add Other-output section to Flipstream Web App case study

--- a/flipstream-webapp.html
+++ b/flipstream-webapp.html
@@ -183,6 +183,29 @@
       </div>
     </section>
 
+    <!-- Other output -->
+    <section class="case-section">
+      <div class="case-section-heading">
+        <h3>Other output</h3>
+      </div>
+
+      <div class="case-section-content zenyum-app-outputs">
+        <article class="output-item">
+          <span class="output-label">User roles and permission</span>
+          <div class="output-image">
+            <img src="assets/images/case-studies/flipstream-webapp/output-roles.jpg" alt="User roles and permission">
+          </div>
+        </article>
+
+        <article class="output-item">
+          <span class="output-label">Customer lifecycle email plan</span>
+          <div class="output-image">
+            <img src="assets/images/case-studies/flipstream-webapp/output-email.jpg" alt="Customer lifecycle email plan">
+          </div>
+        </article>
+      </div>
+    </section>
+
   </main>
 
   <footer class="site-footer">
