Hide testimonials section

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
         </div>
     </section>
 
-    <!-- Testimonials -->
-    <section id="testimonials">
+    <!-- Testimonials (disabled until client approvals) -->
+    <section id="testimonials" hidden>
         <div class="testimonials-grid">
             <h3 class="testimonials-heading">Social proof</h3>
 
