Add Archive section in Index. Add Flipstream Brand Book case study.

--- a/flipstream-webapp.html
+++ b/flipstream-webapp.html
@@ -31,6 +31,7 @@
       <div class="nav-links" id="nav-menu">
         <a href="/#projects" class="nav-link">Work</a>
         <a href="/about.html" class="nav-link">About</a>
+        <a href="/#archive" class="nav-link">Archive</a>
         <a href="assets/Resume-ChungWenjin.pdf" class="nav-link" target="_blank" rel="noopener">Resume</a>
       </div>
     </nav>
