--- a/flipstream-brandbook.html
+++ b/flipstream-brandbook.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Zenyum Aligners Self-checkout</title>
+  <title>Flipstream Brand Book</title>
 
   <!-- Favicon -->
   <link rel="icon" href="assets/favicon/favicon.svg" type="image/svg+xml">
@@ -39,31 +39,17 @@
 
   <main id="case-study">
     <!-- Case hero -->
-    <section class="case-hero">
-      <div class="case-hero-header">
-        <span class="case-number">04</span>
-        <div class="case-intro">
-          <h1 class="case-title">Zenyum Aligners</h1>
-          <h1 class="case-title">Self-checkout</h1>
-          <p class="case-subtitle">Digitalizing Zenyum’s offline sales experience to give patients a smoother, more transparent journey from consultation to treatment.</p>
-        </div>
-      </div>
-      <div class="case-hero-image">
-        <img src="assets/images/case-studies/zenyum-checkout/hero.jpg" alt="Zenyum Aligners mobile checkout interface">
-      </div>
+    <section class="case-hero case-hero-simple">
+      <h1 class="case-title-simple">Flipstream Brand Book</h1>
     </section>
 
     <!-- Case metadata -->
-    <section class="case-metadata">
+    <section class="case-metadata case-metadata-left">
       <div class="metadata-grid">
         <div class="metadata-items">
           <dl class="metadata-item">
             <dt>Client</dt>
-            <dd>Zenyum</dd>
-          </dl>
-          <dl class="metadata-item">
-            <dt>Scope</dt>
-            <dd>B2C; Web app</dd>
+            <dd>Flipstream</dd>
           </dl>
           <dl class="metadata-item">
             <dt>Year</dt>
@@ -71,39 +57,72 @@
           </dl>
           <dl class="metadata-item">
             <dt>Context</dt>
-            <dd>Zenyum’s Aligner sales and payment process is handled entirely offline. This creates high operational load for sales team, introduces pricing inconsistencies, and creates unnecessary friction for patients who expect seamless self-service checkout experiences.</dd>
+            <dd>Created a lightweight brand book aligned with the design system to support marketing teams, along with reusable marketing assets.</dd>
           </dl>
         </div>
       </div>
     </section>
 
-    <!-- Solution -->
+    <!-- Brand book -->
     <section class="case-section">
       <div class="case-section-heading">
-        <h3>Solution</h3>
+        <h3>Brand book</h3>
       </div>
 
-      <div class="case-section-content zenyum-solution-grid">
-        <article class="case-solution zenyum-solution">
-          <div class="case-image">
-            <img src="assets/images/case-studies/zenyum-checkout/solution-timeline.jpg" alt="Personal timeline to track sales journey">
+      <div class="case-section-content">
+        <div class="brandbook-grid">
+          <div class="brandbook-item brandbook-logo">
+            <img src="assets/images/case-studies/flipstream-brandbook/brand-book-logo.jpg" alt="Flipstream wordmark and lettermark">
           </div>
-          <p>Personal treatment timeline to track patient’s sales journey and upcoming steps.</p>
+          <div class="brandbook-item brandbook-typography">
+            <img src="assets/images/case-studies/flipstream-brandbook/brand-book-typography.jpg" alt="Poppins typeface">
+          </div>
+          <div class="brandbook-item brandbook-colours">
+            <img src="assets/images/case-studies/flipstream-brandbook/brand-book-colours.jpg" alt="Flipstream color palette">
+          </div>
+          <div class="brandbook-item brandbook-tone">
+            <img src="assets/images/case-studies/flipstream-brandbook/brand-book-tone-of-voice.jpg" alt="Tone of voice spectrum">
+          </div>
+          <div class="brandbook-item brandbook-theme">
+            <img src="assets/images/case-studies/flipstream-brandbook/brand-book-visual-theme.jpg" alt="Visual theme: Minimalistic, Organised, Modern">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Marketing asset samples -->
+    <section class="case-section">
+      <div class="case-section-heading">
+        <h3>Marketing asset samples</h3>
+      </div>
+
+      <div class="case-section-content marketing-assets-grid">
+        <article class="marketing-asset">
+          <span class="marketing-asset-label">Website social preview</span>
+          <div class="case-image">
+            <img src="assets/images/case-studies/flipstream-brandbook/marketing-social-preview.jpg" alt="Website social preview">
+          </div>
         </article>
 
-        <article class="case-solution zenyum-solution">
+        <article class="marketing-asset">
+          <span class="marketing-asset-label">Email header</span>
           <div class="case-image">
-            <img src="assets/images/case-studies/zenyum-checkout/solution-treatment-plan.jpg" alt="Treatment plan review">
+            <img src="assets/images/case-studies/flipstream-brandbook/marketing-email-header.jpg" alt="Email header">
           </div>
-          <p>Online treatment plan review and approval.</p>
         </article>
 
-        <article class="case-solution zenyum-solution">
+        <article class="marketing-asset">
+          <span class="marketing-asset-label">LinkedIn cover</span>
           <div class="case-image">
-            <img src="assets/images/case-studies/zenyum-checkout/solution-checkout-page.jpg" alt="Checkout page">
+            <img src="assets/images/case-studies/flipstream-brandbook/marketing-linkedin-cover.png" alt="LinkedIn cover">
           </div>
-          <p style="font-weight: 500;">One major challenge was managing the shift from high-touch sales to a self-serve experience. Offline sales teams could explain value in real time, and tailor discounts or bundles to drive conversion. </p>
-          <p>Digitally, we needed to reinforce key decision factors, maintain pricing transparency, and provide access to a sales rep when needed. We also leveraged event tracking to support sales in re-engaging patients.</p>
+        </article>
+
+        <article class="marketing-asset">
+          <span class="marketing-asset-label">YouTube thumbnail</span>
+          <div class="case-image">
+            <img src="assets/images/case-studies/flipstream-brandbook/marketing-youtube-thumbnail.jpg" alt="YouTube thumbnail">
+          </div>
         </article>
       </div>
     </section>
