--- a/zenyum-app.html
+++ b/zenyum-app.html
@@ -31,6 +31,7 @@
       <div class="nav-links" id="nav-menu">
         <a href="/#projects" class="nav-link">Work</a>
         <a href="/about.html" class="nav-link">About</a>
+        <a href="/#archive" class="nav-link">Archive</a>
         <a href="assets/Resume-ChungWenjin.pdf" class="nav-link" target="_blank" rel="noopener">Resume</a>
       </div>
     </nav>
