Add Archive: Zenyum Operational Tools

--- a/zenyum-tools.html
+++ b/zenyum-tools.html
@@ -49,11 +49,11 @@
         <div class="metadata-items">
           <dl class="metadata-item">
             <dt>Client</dt>
-            <dd>Flipstream</dd>
+            <dd>Zenyum</dd>
           </dl>
           <dl class="metadata-item">
             <dt>Year</dt>
-            <dd>2025</dd>
+            <dd>2024-2025</dd>
           </dl>
           <dl class="metadata-item">
             <dt>Context</dt>
@@ -63,69 +63,83 @@
       </div>
     </section>
 
-    <!-- Brand book -->
+    <!-- Selected projects -->
     <section class="case-section">
       <div class="case-section-heading">
-        <h3>Brand book</h3>
+        <h3>Selected projects</h3>
       </div>
 
       <div class="case-section-content">
-        <div class="brandbook-grid">
-          <div class="brandbook-item brandbook-logo">
-            <img src="assets/images/case-studies/flipstream-brandbook/brand-book-logo.jpg" alt="Flipstream wordmark and lettermark">
-          </div>
-          <div class="brandbook-item brandbook-typography">
-            <img src="assets/images/case-studies/flipstream-brandbook/brand-book-typography.jpg" alt="Poppins typeface">
-          </div>
-          <div class="brandbook-item brandbook-colours">
-            <img src="assets/images/case-studies/flipstream-brandbook/brand-book-colours.jpg" alt="Flipstream color palette">
-          </div>
-          <div class="brandbook-item brandbook-tone">
-            <img src="assets/images/case-studies/flipstream-brandbook/brand-book-tone-of-voice.jpg" alt="Tone of voice spectrum">
-          </div>
-          <div class="brandbook-item brandbook-theme">
-            <img src="assets/images/case-studies/flipstream-brandbook/brand-book-visual-theme.jpg" alt="Visual theme: Minimalistic, Organised, Modern">
-          </div>
+        <div class="tools-grid">
+          <article class="tools-item">
+            <div class="tools-label">
+              <p class="tools-label-title">LINE notification</p>
+              <p class="tools-label-desc">Enabled partner doctors to receive operational notifications via LINE.</p>
+            </div>
+            <div class="tools-images">
+              <img src="assets/images/case-studies/zenyum-tools/line-connect.jpg" alt="LINE notification interface">
+              <img src="assets/images/case-studies/zenyum-tools/line-preferences.jpg" alt="LINE notification settings">
+            </div>
+          </article>
+
+          <article class="tools-item">
+            <div class="tools-label">
+              <p class="tools-label-title">Case library</p>
+              <p class="tools-label-desc">Enhanced the centralised library of successful cases to support doctors during patient case review.</p>
+            </div>
+            <div class="tools-images">
+              <img src="assets/images/case-studies/zenyum-tools/case-library-list.jpg" alt="Case library overview">
+              <img src="assets/images/case-studies/zenyum-tools/case-library-case.jpg" alt="Case library detail">
+            </div>
+          </article>
+
+          <article class="tools-item">
+            <div class="tools-label">
+              <p class="tools-label-title">WMS / CP Bundle</p>
+              <p class="tools-label-desc">Designed the interface for managing Consumer Product Bundles to be offered during patient checkout.</p>
+            </div>
+            <div class="tools-images">
+              <img src="assets/images/case-studies/zenyum-tools/wms-list.jpg" alt="WMS CP Bundle interface">
+              <img src="assets/images/case-studies/zenyum-tools/wms-create-bundle.jpg" alt="WMS create CP Bundle">
+            </div>
+          </article>
+
+          <article class="tools-item">
+            <div class="tools-label">
+              <p class="tools-label-title">Promotion log</p>
+              <p class="tools-label-desc">Created tools for marketing teams to create, manage, and track promotions.</p>
+            </div>
+            <div class="tools-images">
+              <img src="assets/images/case-studies/zenyum-tools/promotion-log.jpg" alt="Promotion log list">
+              <img src="assets/images/case-studies/zenyum-tools/promotion-creation.jpg" alt="Create promotion">
+            </div>
+          </article>
+
+          <article class="tools-item">
+            <div class="tools-label">
+              <p class="tools-label-title">Promotion redemption</p>
+              <p class="tools-label-desc">Updated patient prescription flows, allowing doctors to apply promotion codes.</p>
+            </div>
+            <div class="tools-images">
+              <img src="assets/images/case-studies/zenyum-tools/promo-claim-1.jpg" alt="Promotion redemption flow">
+              <img src="assets/images/case-studies/zenyum-tools/promo-claim-2.jpg" alt="Promotion redemption flow">
+            </div>
+          </article>
+
+          <article class="tools-item">
+            <div class="tools-label">
+              <p class="tools-label-title">Prescription instructions</p>
+              <p class="tools-label-desc">Improved flow for doctors to update their treatment prescription instructions, including re-uploading files and responding to medical lab inquiries.</p>
+            </div>
+            <div class="tools-images">
+              <img src="assets/images/case-studies/zenyum-tools/tpv-reupload.jpg" alt="Prescription instructions reupload files">
+              <img src="assets/images/case-studies/zenyum-tools/tpv-qmed.jpg" alt="Prescription instructions medical lab questions">
+            </div>
+          </article>
         </div>
       </div>
     </section>
 
-    <!-- Marketing asset samples -->
-    <section class="case-section">
-      <div class="case-section-heading">
-        <h3>Marketing asset samples</h3>
-      </div>
-
-      <div class="case-section-content marketing-assets-grid">
-        <article class="marketing-asset">
-          <span class="marketing-asset-label">Website social preview</span>
-          <div class="case-image">
-            <img src="assets/images/case-studies/flipstream-brandbook/marketing-social-preview.jpg" alt="Website social preview">
-          </div>
-        </article>
-
-        <article class="marketing-asset">
-          <span class="marketing-asset-label">Email header</span>
-          <div class="case-image">
-            <img src="assets/images/case-studies/flipstream-brandbook/marketing-email-header.jpg" alt="Email header">
-          </div>
-        </article>
-
-        <article class="marketing-asset">
-          <span class="marketing-asset-label">LinkedIn cover</span>
-          <div class="case-image">
-            <img src="assets/images/case-studies/flipstream-brandbook/marketing-linkedin-cover.png" alt="LinkedIn cover">
-          </div>
-        </article>
-
-        <article class="marketing-asset">
-          <span class="marketing-asset-label">YouTube thumbnail</span>
-          <div class="case-image">
-            <img src="assets/images/case-studies/flipstream-brandbook/marketing-youtube-thumbnail.jpg" alt="YouTube thumbnail">
-          </div>
-        </article>
-      </div>
-    </section>
   </main>
 
   <footer class="site-footer">
