Add archive to footer

--- a/zenyum-checkout.html
+++ b/zenyum-checkout.html
@@ -124,6 +124,14 @@
         </nav>
       </div>
       <div class="footer-column">
+        <span class="footer-heading">Archive</span>
+        <nav class="footer-links">
+          <a href="/flipstream-system.html">Flipstream Design System</a>
+          <a href="/flipstream-brandbook.html">Flipstream Brand Book</a>
+          <a href="/zenyum-tools.html">Zenyum Operational Tools</a>
+        </nav>
+      </div>
+      <div class="footer-column">
         <span class="footer-heading">Contact</span>
         <nav class="footer-links">
           <a href="mailto:wenjin.chung@gmail.com">wenjin.chung@gmail.com</a>
