--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
   <!-- Styles -->
   <link rel="stylesheet" href="styles/main.css" />
+
+  <!-- Web performance -->
+  <script src="https://t.contentsquare.net/uxa/f558269b97473.js"></script>
 </head>
 
 <body>
